// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> matches stored snapshot 1`] = `
.c0 {
  width: 100%;
  position: relative;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  box-shadow: rgba(0,0,0,0.6) 0px 2px 15px -5px;
  overflow-x: hidden;
}

.c0:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: -100%;
  height: 2px;
  width: 100%;
  background: #000000;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-animation: 3s infinite ease-in-out alternate;
  animation: 3s infinite ease-in-out alternate;
}

.c1 {
  padding: 24px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border: 2px solid #fff;
  width: 100%;
  font-size: 1.5rem;
  outline: none;
  -webkit-transition: border 0.3s cubic-bezier(0.19,1,0.22,1);
  transition: border 0.3s cubic-bezier(0.19,1,0.22,1);
  -webkit-animation: 2s 4 cubic-bezier(0.19,1,0.22,1);
  animation: 2s 4 cubic-bezier(0.19,1,0.22,1);
}

.c1::-webkit-input-placeholder {
  color: #ddd;
}

.c1::-moz-placeholder {
  color: #ddd;
}

.c1:-ms-input-placeholder {
  color: #ddd;
}

.c1::placeholder {
  color: #ddd;
}

.c1:hover,
.c1:focus {
  border: 2px solid #f28e1c;
}

<SearchBar
  error={false}
  errorMessage="Houve um problema ao encontrar o endereço solicitado, tente novamente."
  loading={false}
  onChange={[MockFunction]}
  placeholder="Ex: Rua Américo Brasiliense, São Paulo"
  value=""
>
  <div>
    <styled.div
      loading="false"
    >
      <div
        className="c0"
        loading="false"
      >
        <styled.input
          aria-errormessage="errorMessageSearchBar"
          aria-invalid={false}
          error="false"
          onChange={[MockFunction]}
          placeholder="Ex: Rua Américo Brasiliense, São Paulo"
          type="search"
          value=""
        >
          <input
            aria-errormessage="errorMessageSearchBar"
            aria-invalid={false}
            className="c1"
            onChange={[MockFunction]}
            placeholder="Ex: Rua Américo Brasiliense, São Paulo"
            type="search"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </div>
</SearchBar>
`;

exports[`<SearchBar /> renders error state 1`] = `
.c0 {
  width: 100%;
  position: relative;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  box-shadow: rgba(0,0,0,0.6) 0px 2px 15px -5px;
  overflow-x: hidden;
}

.c0:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: -100%;
  height: 2px;
  width: 100%;
  background: #000000;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-animation: 3s infinite ease-in-out alternate;
  animation: 3s infinite ease-in-out alternate;
}

.c1 {
  padding: 24px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border: 2px solid #fff;
  width: 100%;
  font-size: 1.5rem;
  outline: none;
  -webkit-transition: border 0.3s cubic-bezier(0.19,1,0.22,1);
  transition: border 0.3s cubic-bezier(0.19,1,0.22,1);
  -webkit-animation: dbNLkw 2s 4 cubic-bezier(0.19,1,0.22,1);
  animation: dbNLkw 2s 4 cubic-bezier(0.19,1,0.22,1);
}

.c1::-webkit-input-placeholder {
  color: #ddd;
}

.c1::-moz-placeholder {
  color: #ddd;
}

.c1:-ms-input-placeholder {
  color: #ddd;
}

.c1::placeholder {
  color: #ddd;
}

.c1:hover,
.c1:focus {
  border: 2px solid #f28e1c;
}

.c2 {
  display: block;
  color: #b03c3c;
  font-size: 0.8rem;
  margin-top: 8px;
  opacity: 0;
  -webkit-animation: jnNqVJ 2s forwards cubic-bezier(0.19,1,0.22,1);
  animation: jnNqVJ 2s forwards cubic-bezier(0.19,1,0.22,1);
}

<SearchBar
  error={true}
  errorMessage="Houve um problema ao encontrar o endereço solicitado, tente novamente."
  loading={false}
  onChange={[MockFunction]}
  placeholder="Ex: Rua Américo Brasiliense, São Paulo"
  value=""
>
  <div>
    <styled.div
      loading="false"
    >
      <div
        className="c0"
        loading="false"
      >
        <styled.input
          aria-errormessage="errorMessageSearchBar"
          aria-invalid={true}
          error="true"
          onChange={[MockFunction]}
          placeholder="Ex: Rua Américo Brasiliense, São Paulo"
          type="search"
          value=""
        >
          <input
            aria-errormessage="errorMessageSearchBar"
            aria-invalid={true}
            className="c1"
            onChange={[MockFunction]}
            placeholder="Ex: Rua Américo Brasiliense, São Paulo"
            type="search"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
    <styled.strong
      id="errorMessageSearchBar"
    >
      <strong
        className="c2"
        id="errorMessageSearchBar"
      >
        Houve um problema ao encontrar o endereço solicitado, tente novamente.
      </strong>
    </styled.strong>
  </div>
</SearchBar>
`;

exports[`<SearchBar /> renders loading state 1`] = `
.c0 {
  width: 100%;
  position: relative;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  box-shadow: rgba(0,0,0,0.6) 0px 2px 15px -5px;
  overflow-x: hidden;
}

.c0:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: -100%;
  height: 2px;
  width: 100%;
  background: #000000;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-animation: dgfBtW 3s infinite ease-in-out alternate;
  animation: dgfBtW 3s infinite ease-in-out alternate;
}

.c1 {
  padding: 24px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border: 2px solid #fff;
  width: 100%;
  font-size: 1.5rem;
  outline: none;
  -webkit-transition: border 0.3s cubic-bezier(0.19,1,0.22,1);
  transition: border 0.3s cubic-bezier(0.19,1,0.22,1);
  -webkit-animation: 2s 4 cubic-bezier(0.19,1,0.22,1);
  animation: 2s 4 cubic-bezier(0.19,1,0.22,1);
}

.c1::-webkit-input-placeholder {
  color: #ddd;
}

.c1::-moz-placeholder {
  color: #ddd;
}

.c1:-ms-input-placeholder {
  color: #ddd;
}

.c1::placeholder {
  color: #ddd;
}

.c1:hover,
.c1:focus {
  border: 2px solid #f28e1c;
}

<SearchBar
  error={false}
  errorMessage="Houve um problema ao encontrar o endereço solicitado, tente novamente."
  loading={true}
  onChange={[MockFunction]}
  placeholder="Ex: Rua Américo Brasiliense, São Paulo"
  value=""
>
  <div>
    <styled.div
      loading="true"
    >
      <div
        className="c0"
        loading="true"
      >
        <styled.input
          aria-errormessage="errorMessageSearchBar"
          aria-invalid={false}
          error="false"
          onChange={[MockFunction]}
          placeholder="Ex: Rua Américo Brasiliense, São Paulo"
          type="search"
          value=""
        >
          <input
            aria-errormessage="errorMessageSearchBar"
            aria-invalid={false}
            className="c1"
            onChange={[MockFunction]}
            placeholder="Ex: Rua Américo Brasiliense, São Paulo"
            type="search"
            value=""
          />
        </styled.input>
      </div>
    </styled.div>
  </div>
</SearchBar>
`;
